# notebroom

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  __init__.py  input.ipynb.bak  main.py  main2.py  pyproject.toml  requirements.txt  sample.ipynb  setup.py  tasks.yaml  test.py  wip-001-hf-nlp-course-part-1.ipynb  wip-001-hf-nlp-course-part-1_improved.ipynb  wip-mnist-denoise-with-autoencoder.ipynb  wip-mnist-generate-with-vae.ipynb  wip-mnist-generate-with-vae_improved.ipynb
examples/: task_config.yaml
notebroom/: __init__.py  cli.py  core.py  llm.py  main.py  notebroom.py  utils.py
notebroom/tasks/: __init__.py  base.py  clean_markdown.py  dump_notebook.py  emojify.py  fix_colab_links.py  standardize_indentation.py
samples/: good.ipynb  rnn-bit-parity-classifier.ipynb
src/notebroom/: __init__.py  main.py
src/notebroom/configs/: .env.example  base_system_prompt.md  base_system_prompt.txt  contract.prompt.md  contract_prompt.txt  educate_prompt.txt  expand.prompt.md  expand_prompt.txt  flow_prompt.txt  polish_prompt.txt  style_prompt.txt  system_prompt.txt
