[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebroom"
version = "0.1.0"
description = "Clean up Jupyter notebook markdown cells using LLMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nbformat==5.9.2",
    "python-dotenv==1.0.0",
    "colorama==0.4.6",
    "tqdm==4.66.1",
    "tiktoken>=0.5.1,<0.6.0",
    "langchain-openai>=0.0.5",
    "langchain>=0.1.0",
    "langchain-google-vertexai==0.0.7",
    "pydantic>=1.9,<2.0",
    "langsmith"
]

[project.scripts]
notebroom = "notebroom.notebroom:main"

[tool.hatch.build.targets.wheel]
packages = ["notebroom"]
