[tool.poetry]
name = "notebroom"
version = "0.1.0"
description = "Jupyter notebook markdown cleaner using LLMs"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.9.2"
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
colorama = "^0.4.6"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.0"
langchain-google-vertexai = "^0.1.0"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
openai = "1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
